tools/tests/ui/fail/l1069.cnf
// Test file for error code: L1069
// Expected error: Overflow Unmatched character in type annotation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
